# lingua

./: .alias  .gitignore  README.md  git_versioning.py  pyproject.toml
lingua/: __init__.py  cli.py  cli_output.py  spanish_translations.py  timezone_helper.py  unit_conversion.py
lingua/translation/: translation.py
lingua/unitconversion/: unitconversion.py
spanish_translator/: cli.py  spanish_translation.py
tests/: test_cli.py  test_spanish_translations.py
