[tool.poetry]
name = "lingua"
version = "v1.3.0+0.98c994e"
description = "translation and unit conversion utilities with a cli"
authors = ["Brian White <brian@thirdember.com>"]
readme = "README.md"
packages = [{ include = "lingua" }]

[tool.poetry.dependencies]
python = "^3.9"
num2words = "^0.5.12"
cloup = "^2.0.0.post1"
poetry = "^1.4.0"
rich = "^13.3.4"

[tool.poetry.scripts]
lingua = "lingua.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-bugbear = "^23.2.13"
dunamai = "^1.16.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "v{base}+{distance}.{commit}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
